# kubernetes-rust

./: Cargo.toml
examples/: incluster_config.rs  list_pod.rs
src/: lib.rs
src/client/: mod.rs
src/config/: apis.rs  kube_config.rs  mod.rs
