[package]
name = "kubernetes"
version = "0.1.0"
description = "Kubernetes rust client"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/ynqa/kubernetes-rust"
readme = "README.md"
keywords = ["kubernetes"]
categories = ["web-programming::http-client"]
edition = "2018"

[dependencies]
base64 = "0.10.1"
chrono = "0.4.6"
dirs = "1.0.5"
failure = "0.1.5"
http = "0.1.17"
lazy_static = "1.3.0"
openssl = "0.10.24"
reqwest = "0.9.19"
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"
serde_yaml = "0.8.9"
time = "0.1.42"
url = "1.7.2"

[dependencies.oauth]
package = "tame-oauth"
version = "0.2.1"
features = ["gcp"]

[dependencies.futures]
version = "=0.3.0-alpha.14"
package = "futures-preview"
features = ["compat"]

[dev-dependencies]
tempfile = "3.1.0"

[dev-dependencies.k8s-openapi]
git = "https://github.com/Arnavion/k8s-openapi-codegen"
rev = "b5b46233b7752f0a99a106c9c7d07f7387c41787"
features = ["v1_14"]
